# duckbot-rag-memory

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  INDEX.md  INSTALL.md  ISSUES.md  LICENSE  MANIFEST.md  README.md  SECURITY.md  duck-memory  duck-memory.bat  pyproject.toml  pytest.ini  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
benchmarks/: golden.jsonl
data/: franz-identity.md  quarantine.db
docs/: ARCHITECTURE.md  INTEGRATION.md  PLUGIN_SURFACE.md  RESEARCH.md
scripts/: _format_compact.py  _format_snippet.py  backup-brain.sh  brain-recall.sh  cleanup-test-artifacts.sh  com.duckbot.memory-watcher.plist  cron.sh  demo.bat  demo.command  demo.sh  duck-memory-mcp.bat  duckbot-ask  duckbot-memory-mcp.bat  duckbot-memory-mcp.sh  eval.sh  hermes-bootstrap.sh  hermes-memory-mcp.bat  hermes-postflight.sh  hermes-preflight.sh  install-linux.sh  install-macos.sh  install-pre-commit.ps1  install.ps1  install.sh  openclaw-bootstrap.sh  rebuild-corrupt-hnsw.py  rebuild-watcher-state.py  reconnect.sh  restore-brain.sh  run-watcher.sh  secret-scan.ps1  secret-scan.sh  setup.bat  setup.command  setup.ps1  setup.sh  start-watcher-windows.bat  start-watcher.ps1  start-watcher.sh  start.bat  (+8 more)
src/: __init__.py  blocks.py  chunk.py  cli.py  consolidate.py  dashboard.py  decay.py  dialect.py  embeddings.py  entities.py  eval.py  events.py  fsrs.py  fsrs_optimizer.py  graph.py  ingest.py  injection_scan.py  llm_client.py  mcp_server.py  memory.py  observer.py  palace.py  query.py  ratelimit.py  rerank.py  (+8 more)
(+98 files in other folders)
